// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`editSongForm.vue > edits a single song 1`] = `
<form data-v-cf47e900="" class="max-w-[540px]">
  <header data-v-cf47e900="" class="gap-4"><img data-v-cf47e900="" src="http://test/album.jpg" alt="" class="w-[84px] aspect-square object-cover object-center rounded-md">
    <div data-v-cf47e900="" class="flex-1 flex flex-col justify-center overflow-hidden">
      <h1 data-v-cf47e900="" class="">Rocket to Heaven</h1>
      <h2 data-v-cf47e900="" class="" data-testid="displayed-artist-name">Led Zeppelin</h2>
      <h2 data-v-cf47e900="" class="" data-testid="displayed-album-name">IV</h2>
    </div>
  </header>
  <div data-v-cf47e900="" class="min-h-full flex flex-col relative mt-4">
    <nav data-v-a41b5aa5="" data-v-cf47e900="" class="tab-list flex overflow-x-auto px-6 min-h-[48px]" role="tablist"><button data-v-aff7a094="" data-v-cf47e900="" aria-selected="true" class="tab-button m3-state m3-title-small" role="tab" type="button" id="editSongTabDetails" aria-controls="editSongPanelDetails"><span data-v-aff7a094="" class="inner"> Details </span></button><button data-v-aff7a094="" data-v-cf47e900="" aria-selected="false" class="tab-button m3-state m3-title-small" role="tab" type="button" id="editSongTabLyrics" aria-controls="editSongPanelLyrics" data-testid="edit-song-lyrics-tab"><span data-v-aff7a094="" class="inner"> Lyrics </span></button></nav>
    <div data-v-80d459e5="" data-v-cf47e900="" class="scrolls p-6">
      <div data-v-cf47e900="" role="tabpanel" tabindex="0" id="editSongPanelDetails" aria-labelledby="editSongTabDetails" class="space-y-5">
        <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Title</span><input data-v-cf47e900="" aria-label="Title" class="k-field block w-full" type="text" data-testid="title-input" name="title" title="Title"></label>
          <!--v-if-->
        </div>
        <div data-v-cf47e900="" class="md:grid-cols-2 grid gap-3">
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Artist</span><input data-v-cf47e900="" aria-label="artist" class="k-field block w-full" type="text" placeholder="" data-testid="artist-input" name="artist"></label>
            <!--v-if-->
          </div>
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Album Artist</span><input data-v-cf47e900="" aria-label="album_artist" class="k-field block w-full" type="text" placeholder="" data-testid="albumArtist-input" name="album_artist"></label>
            <!--v-if-->
          </div>
        </div>
        <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Album</span><input data-v-cf47e900="" aria-label="album" class="k-field block w-full" type="text" placeholder="" data-testid="album-input" name="album"></label>
          <!--v-if-->
        </div>
        <div data-v-cf47e900="" class="md:grid-cols-2 grid gap-3">
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Track</span><input data-v-cf47e900="" aria-label="track" class="k-field block w-full" type="number" placeholder="" data-testid="track-input" min="1" name="track"></label>
            <!--v-if-->
          </div>
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Disc</span><input data-v-cf47e900="" aria-label="disc" class="k-field block w-full" type="number" placeholder="" data-testid="disc-input" min="1" name="disc"></label>
            <!--v-if-->
          </div>
        </div>
        <div data-v-cf47e900="" class="md:grid-cols-2 grid gap-3">
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Genre</span><input data-v-cf47e900="" aria-label="genre" class="k-field block w-full" type="text" placeholder="" data-testid="genre-input" list="genres" name="genre"><datalist data-v-cf47e900="" id="genres">
                <option data-v-cf47e900="" value="Blues"></option>
                <option data-v-cf47e900="" value="Classic Rock"></option>
                <option data-v-cf47e900="" value="Country"></option>
                <option data-v-cf47e900="" value="Dance"></option>
                <option data-v-cf47e900="" value="Disco"></option>
                <option data-v-cf47e900="" value="Funk"></option>
                <option data-v-cf47e900="" value="Grunge"></option>
                <option data-v-cf47e900="" value="Hip-Hop"></option>
                <option data-v-cf47e900="" value="Jazz"></option>
                <option data-v-cf47e900="" value="Metal"></option>
                <option data-v-cf47e900="" value="New Age"></option>
                <option data-v-cf47e900="" value="Oldies"></option>
                <option data-v-cf47e900="" value="Other"></option>
                <option data-v-cf47e900="" value="Pop"></option>
                <option data-v-cf47e900="" value="R&amp;B"></option>
                <option data-v-cf47e900="" value="Rap"></option>
                <option data-v-cf47e900="" value="Reggae"></option>
                <option data-v-cf47e900="" value="Rock"></option>
                <option data-v-cf47e900="" value="Techno"></option>
                <option data-v-cf47e900="" value="Industrial"></option>
                <option data-v-cf47e900="" value="Alternative"></option>
                <option data-v-cf47e900="" value="Ska"></option>
                <option data-v-cf47e900="" value="Death Metal"></option>
                <option data-v-cf47e900="" value="Pranks"></option>
                <option data-v-cf47e900="" value="Soundtrack"></option>
                <option data-v-cf47e900="" value="Euro-Techno"></option>
                <option data-v-cf47e900="" value="Ambient"></option>
                <option data-v-cf47e900="" value="Trip-Hop"></option>
                <option data-v-cf47e900="" value="Vocal"></option>
                <option data-v-cf47e900="" value="Jazz &amp; Funk"></option>
                <option data-v-cf47e900="" value="Fusion"></option>
                <option data-v-cf47e900="" value="Trance"></option>
                <option data-v-cf47e900="" value="Classical"></option>
                <option data-v-cf47e900="" value="Instrumental"></option>
                <option data-v-cf47e900="" value="Acid"></option>
                <option data-v-cf47e900="" value="House"></option>
                <option data-v-cf47e900="" value="Game"></option>
                <option data-v-cf47e900="" value="Sound Clip"></option>
                <option data-v-cf47e900="" value="Gospel"></option>
                <option data-v-cf47e900="" value="Noise"></option>
                <option data-v-cf47e900="" value="Alternative Rock"></option>
                <option data-v-cf47e900="" value="Bass"></option>
                <option data-v-cf47e900="" value="Punk"></option>
                <option data-v-cf47e900="" value="Space"></option>
                <option data-v-cf47e900="" value="Meditative"></option>
                <option data-v-cf47e900="" value="Instrumental Pop"></option>
                <option data-v-cf47e900="" value="Instrumental Rock"></option>
                <option data-v-cf47e900="" value="Ethnic"></option>
                <option data-v-cf47e900="" value="Gothic"></option>
                <option data-v-cf47e900="" value="Darkwave"></option>
                <option data-v-cf47e900="" value="Techno-Industrial"></option>
                <option data-v-cf47e900="" value="Electronic"></option>
                <option data-v-cf47e900="" value="Pop-Folk"></option>
                <option data-v-cf47e900="" value="Eurodance"></option>
                <option data-v-cf47e900="" value="Dream"></option>
                <option data-v-cf47e900="" value="Southern Rock"></option>
                <option data-v-cf47e900="" value="Comedy"></option>
                <option data-v-cf47e900="" value="Cult"></option>
                <option data-v-cf47e900="" value="Gangsta"></option>
                <option data-v-cf47e900="" value="Top 40"></option>
                <option data-v-cf47e900="" value="Christian Rap"></option>
                <option data-v-cf47e900="" value="Pop/Funk"></option>
                <option data-v-cf47e900="" value="Jungle"></option>
                <option data-v-cf47e900="" value="Native US"></option>
                <option data-v-cf47e900="" value="Cabaret"></option>
                <option data-v-cf47e900="" value="New Wave"></option>
                <option data-v-cf47e900="" value="Psychedelic"></option>
                <option data-v-cf47e900="" value="Rave"></option>
                <option data-v-cf47e900="" value="Showtunes"></option>
                <option data-v-cf47e900="" value="Trailer"></option>
                <option data-v-cf47e900="" value="Lo-Fi"></option>
                <option data-v-cf47e900="" value="Tribal"></option>
                <option data-v-cf47e900="" value="Acid Punk"></option>
                <option data-v-cf47e900="" value="Acid Jazz"></option>
                <option data-v-cf47e900="" value="Polka"></option>
                <option data-v-cf47e900="" value="Retro"></option>
                <option data-v-cf47e900="" value="Musical"></option>
                <option data-v-cf47e900="" value="Rock &amp; Roll"></option>
                <option data-v-cf47e900="" value="Hard Rock"></option>
                <option data-v-cf47e900="" value="Folk"></option>
                <option data-v-cf47e900="" value="Folk-Rock"></option>
                <option data-v-cf47e900="" value="National Folk"></option>
                <option data-v-cf47e900="" value="Swing"></option>
                <option data-v-cf47e900="" value="Fast Fusion"></option>
                <option data-v-cf47e900="" value="Bebob"></option>
                <option data-v-cf47e900="" value="Latin"></option>
                <option data-v-cf47e900="" value="Revival"></option>
                <option data-v-cf47e900="" value="Celtic"></option>
                <option data-v-cf47e900="" value="Bluegrass"></option>
                <option data-v-cf47e900="" value="Avantgarde"></option>
                <option data-v-cf47e900="" value="Gothic Rock"></option>
                <option data-v-cf47e900="" value="Progressive Rock"></option>
                <option data-v-cf47e900="" value="Psychedelic Rock"></option>
                <option data-v-cf47e900="" value="Symphonic Rock"></option>
                <option data-v-cf47e900="" value="Slow Rock"></option>
                <option data-v-cf47e900="" value="Big Band"></option>
                <option data-v-cf47e900="" value="Chorus"></option>
                <option data-v-cf47e900="" value="Easy Listening"></option>
                <option data-v-cf47e900="" value="Acoustic"></option>
                <option data-v-cf47e900="" value="Humour"></option>
                <option data-v-cf47e900="" value="Speech"></option>
                <option data-v-cf47e900="" value="Chanson"></option>
                <option data-v-cf47e900="" value="Opera"></option>
                <option data-v-cf47e900="" value="Chamber Music"></option>
                <option data-v-cf47e900="" value="Sonata"></option>
                <option data-v-cf47e900="" value="Symphony"></option>
                <option data-v-cf47e900="" value="Booty Bass"></option>
                <option data-v-cf47e900="" value="Primus"></option>
                <option data-v-cf47e900="" value="Porn Groove"></option>
                <option data-v-cf47e900="" value="Satire"></option>
                <option data-v-cf47e900="" value="Slow Jam"></option>
                <option data-v-cf47e900="" value="Club"></option>
                <option data-v-cf47e900="" value="Tango"></option>
                <option data-v-cf47e900="" value="Samba"></option>
                <option data-v-cf47e900="" value="Folklore"></option>
                <option data-v-cf47e900="" value="Ballad"></option>
                <option data-v-cf47e900="" value="Power Ballad"></option>
                <option data-v-cf47e900="" value="Rhythmic Soul"></option>
                <option data-v-cf47e900="" value="Freestyle"></option>
                <option data-v-cf47e900="" value="Duet"></option>
                <option data-v-cf47e900="" value="Punk Rock"></option>
                <option data-v-cf47e900="" value="Drum Solo"></option>
                <option data-v-cf47e900="" value="A cappella"></option>
                <option data-v-cf47e900="" value="Euro-House"></option>
                <option data-v-cf47e900="" value="Dance Hall"></option>
                <option data-v-cf47e900="" value="Goa"></option>
                <option data-v-cf47e900="" value="Drum &amp; Bass"></option>
                <option data-v-cf47e900="" value="Club-House"></option>
                <option data-v-cf47e900="" value="Hardcore Techno"></option>
                <option data-v-cf47e900="" value="Terror"></option>
                <option data-v-cf47e900="" value="Indie"></option>
                <option data-v-cf47e900="" value="BritPop"></option>
                <option data-v-cf47e900="" value="Negerpunk"></option>
                <option data-v-cf47e900="" value="Polsk Punk"></option>
                <option data-v-cf47e900="" value="Beat"></option>
                <option data-v-cf47e900="" value="Christian Gangsta Rap"></option>
                <option data-v-cf47e900="" value="Heavy Metal"></option>
                <option data-v-cf47e900="" value="Black Metal"></option>
                <option data-v-cf47e900="" value="Crossover"></option>
                <option data-v-cf47e900="" value="Contemporary Christian"></option>
                <option data-v-cf47e900="" value="Christian Rock"></option>
                <option data-v-cf47e900="" value="Merengue"></option>
                <option data-v-cf47e900="" value="Salsa"></option>
                <option data-v-cf47e900="" value="Thrash Metal"></option>
                <option data-v-cf47e900="" value="Anime"></option>
                <option data-v-cf47e900="" value="JPop"></option>
                <option data-v-cf47e900="" value="SynthPop"></option>
                <option data-v-cf47e900="" value="Abstract"></option>
                <option data-v-cf47e900="" value="Art Rock"></option>
                <option data-v-cf47e900="" value="Baroque"></option>
                <option data-v-cf47e900="" value="Bhangra"></option>
                <option data-v-cf47e900="" value="Big beat"></option>
                <option data-v-cf47e900="" value="Breakbeat"></option>
                <option data-v-cf47e900="" value="Chillout"></option>
                <option data-v-cf47e900="" value="Downtempo"></option>
                <option data-v-cf47e900="" value="Dub"></option>
                <option data-v-cf47e900="" value="EBM"></option>
                <option data-v-cf47e900="" value="Eclectic"></option>
                <option data-v-cf47e900="" value="Electro"></option>
                <option data-v-cf47e900="" value="Electroclash"></option>
                <option data-v-cf47e900="" value="Emo"></option>
                <option data-v-cf47e900="" value="Experimental"></option>
                <option data-v-cf47e900="" value="Garage"></option>
                <option data-v-cf47e900="" value="Global"></option>
                <option data-v-cf47e900="" value="IDM"></option>
                <option data-v-cf47e900="" value="Illbient"></option>
                <option data-v-cf47e900="" value="Industro-Goth"></option>
                <option data-v-cf47e900="" value="Jam Band"></option>
                <option data-v-cf47e900="" value="Krautrock"></option>
                <option data-v-cf47e900="" value="Leftfield"></option>
                <option data-v-cf47e900="" value="Lounge"></option>
                <option data-v-cf47e900="" value="Math Rock"></option>
                <option data-v-cf47e900="" value="New Romantic"></option>
                <option data-v-cf47e900="" value="Nu-Breakz"></option>
                <option data-v-cf47e900="" value="Post-Punk"></option>
                <option data-v-cf47e900="" value="Post-Rock"></option>
                <option data-v-cf47e900="" value="Psytrance"></option>
                <option data-v-cf47e900="" value="Shoegaze"></option>
                <option data-v-cf47e900="" value="Space Rock"></option>
                <option data-v-cf47e900="" value="Trop Rock"></option>
                <option data-v-cf47e900="" value="World Music"></option>
                <option data-v-cf47e900="" value="Neoclassical"></option>
                <option data-v-cf47e900="" value="Audiobook"></option>
                <option data-v-cf47e900="" value="Audio Theatre"></option>
                <option data-v-cf47e900="" value="Neue Deutsche Welle"></option>
                <option data-v-cf47e900="" value="Podcast"></option>
                <option data-v-cf47e900="" value="Indie-Rock"></option>
                <option data-v-cf47e900="" value="G-Funk"></option>
                <option data-v-cf47e900="" value="Dubstep"></option>
                <option data-v-cf47e900="" value="Garage Rock"></option>
                <option data-v-cf47e900="" value="Psybient"></option>
              </datalist></label>
            <!--v-if-->
          </div>
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Year</span><input data-v-cf47e900="" aria-label="year" class="k-field block w-full" type="number" placeholder="" data-testid="year-input" name="year"></label>
            <!--v-if-->
          </div>
        </div>
      </div>
      <div data-v-cf47e900="" role="tabpanel" tabindex="0" id="editSongPanelLyrics" aria-labelledby="editSongTabLyrics" style="display: none;">
        <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)">
            <!--v-if--><textarea data-v-cf47e900="" aria-label="lyrics" class="k-field w-full h-48 py-3" data-testid="lyrics-input" name="lyrics" title="Lyrics"></textarea>
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <footer data-v-cf47e900=""><button data-v-b156ac0d="" data-v-cf47e900="" class="k-btn m3-state m3-label-large" type="submit">Update</button><button data-v-b156ac0d="" data-v-cf47e900="" data-variant="ghost" class="k-btn m3-state m3-label-large btn-cancel" type="button">Cancel</button></footer>
</form>
`;

exports[`editSongForm.vue > edits multiple songs 1`] = `
<form data-v-cf47e900="" class="max-w-[540px]">
  <header data-v-cf47e900="" class="gap-4"><img data-v-cf47e900="" src="/assets/img/covers/default.svg" alt="" class="w-[84px] aspect-square object-cover object-center rounded-md">
    <div data-v-cf47e900="" class="flex-1 flex flex-col justify-center overflow-hidden">
      <h1 data-v-cf47e900="" class="mixed">3 songs selected</h1>
      <h2 data-v-cf47e900="" class="mixed" data-testid="displayed-artist-name">Mixed Artists</h2>
      <h2 data-v-cf47e900="" class="mixed" data-testid="displayed-album-name">Mixed Albums</h2>
    </div>
  </header>
  <div data-v-cf47e900="" class="min-h-full flex flex-col relative mt-4">
    <!--v-if-->
    <div data-v-80d459e5="" data-v-cf47e900="" class="scrolls p-6">
      <div data-v-cf47e900="" role="tabpanel" tabindex="0" id="editSongPanelDetails" aria-labelledby="editSongTabDetails" class="space-y-5">
        <!--v-if-->
        <div data-v-cf47e900="" class="md:grid-cols-2 grid gap-3">
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Artist</span><input data-v-cf47e900="" aria-label="artist" class="k-field block w-full" type="text" placeholder="Leave unchanged" data-testid="artist-input" name="artist"></label>
            <!--v-if-->
          </div>
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Album Artist</span><input data-v-cf47e900="" aria-label="album_artist" class="k-field block w-full" type="text" placeholder="Leave unchanged" data-testid="albumArtist-input" name="album_artist"></label>
            <!--v-if-->
          </div>
        </div>
        <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Album</span><input data-v-cf47e900="" aria-label="album" class="k-field block w-full" type="text" placeholder="Leave unchanged" data-testid="album-input" name="album"></label>
          <!--v-if-->
        </div>
        <div data-v-cf47e900="" class="md:grid-cols-2 grid gap-3">
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Track</span><input data-v-cf47e900="" aria-label="track" class="k-field block w-full" type="number" placeholder="Leave unchanged" data-testid="track-input" min="1" name="track"></label>
            <!--v-if-->
          </div>
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Disc</span><input data-v-cf47e900="" aria-label="disc" class="k-field block w-full" type="number" placeholder="Leave unchanged" data-testid="disc-input" min="1" name="disc"></label>
            <!--v-if-->
          </div>
        </div>
        <div data-v-cf47e900="" class="md:grid-cols-2 grid gap-3">
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Genre</span><input data-v-cf47e900="" aria-label="genre" class="k-field block w-full" type="text" placeholder="Leave unchanged" data-testid="genre-input" list="genres" name="genre"><datalist data-v-cf47e900="" id="genres">
                <option data-v-cf47e900="" value="Blues"></option>
                <option data-v-cf47e900="" value="Classic Rock"></option>
                <option data-v-cf47e900="" value="Country"></option>
                <option data-v-cf47e900="" value="Dance"></option>
                <option data-v-cf47e900="" value="Disco"></option>
                <option data-v-cf47e900="" value="Funk"></option>
                <option data-v-cf47e900="" value="Grunge"></option>
                <option data-v-cf47e900="" value="Hip-Hop"></option>
                <option data-v-cf47e900="" value="Jazz"></option>
                <option data-v-cf47e900="" value="Metal"></option>
                <option data-v-cf47e900="" value="New Age"></option>
                <option data-v-cf47e900="" value="Oldies"></option>
                <option data-v-cf47e900="" value="Other"></option>
                <option data-v-cf47e900="" value="Pop"></option>
                <option data-v-cf47e900="" value="R&amp;B"></option>
                <option data-v-cf47e900="" value="Rap"></option>
                <option data-v-cf47e900="" value="Reggae"></option>
                <option data-v-cf47e900="" value="Rock"></option>
                <option data-v-cf47e900="" value="Techno"></option>
                <option data-v-cf47e900="" value="Industrial"></option>
                <option data-v-cf47e900="" value="Alternative"></option>
                <option data-v-cf47e900="" value="Ska"></option>
                <option data-v-cf47e900="" value="Death Metal"></option>
                <option data-v-cf47e900="" value="Pranks"></option>
                <option data-v-cf47e900="" value="Soundtrack"></option>
                <option data-v-cf47e900="" value="Euro-Techno"></option>
                <option data-v-cf47e900="" value="Ambient"></option>
                <option data-v-cf47e900="" value="Trip-Hop"></option>
                <option data-v-cf47e900="" value="Vocal"></option>
                <option data-v-cf47e900="" value="Jazz &amp; Funk"></option>
                <option data-v-cf47e900="" value="Fusion"></option>
                <option data-v-cf47e900="" value="Trance"></option>
                <option data-v-cf47e900="" value="Classical"></option>
                <option data-v-cf47e900="" value="Instrumental"></option>
                <option data-v-cf47e900="" value="Acid"></option>
                <option data-v-cf47e900="" value="House"></option>
                <option data-v-cf47e900="" value="Game"></option>
                <option data-v-cf47e900="" value="Sound Clip"></option>
                <option data-v-cf47e900="" value="Gospel"></option>
                <option data-v-cf47e900="" value="Noise"></option>
                <option data-v-cf47e900="" value="Alternative Rock"></option>
                <option data-v-cf47e900="" value="Bass"></option>
                <option data-v-cf47e900="" value="Punk"></option>
                <option data-v-cf47e900="" value="Space"></option>
                <option data-v-cf47e900="" value="Meditative"></option>
                <option data-v-cf47e900="" value="Instrumental Pop"></option>
                <option data-v-cf47e900="" value="Instrumental Rock"></option>
                <option data-v-cf47e900="" value="Ethnic"></option>
                <option data-v-cf47e900="" value="Gothic"></option>
                <option data-v-cf47e900="" value="Darkwave"></option>
                <option data-v-cf47e900="" value="Techno-Industrial"></option>
                <option data-v-cf47e900="" value="Electronic"></option>
                <option data-v-cf47e900="" value="Pop-Folk"></option>
                <option data-v-cf47e900="" value="Eurodance"></option>
                <option data-v-cf47e900="" value="Dream"></option>
                <option data-v-cf47e900="" value="Southern Rock"></option>
                <option data-v-cf47e900="" value="Comedy"></option>
                <option data-v-cf47e900="" value="Cult"></option>
                <option data-v-cf47e900="" value="Gangsta"></option>
                <option data-v-cf47e900="" value="Top 40"></option>
                <option data-v-cf47e900="" value="Christian Rap"></option>
                <option data-v-cf47e900="" value="Pop/Funk"></option>
                <option data-v-cf47e900="" value="Jungle"></option>
                <option data-v-cf47e900="" value="Native US"></option>
                <option data-v-cf47e900="" value="Cabaret"></option>
                <option data-v-cf47e900="" value="New Wave"></option>
                <option data-v-cf47e900="" value="Psychedelic"></option>
                <option data-v-cf47e900="" value="Rave"></option>
                <option data-v-cf47e900="" value="Showtunes"></option>
                <option data-v-cf47e900="" value="Trailer"></option>
                <option data-v-cf47e900="" value="Lo-Fi"></option>
                <option data-v-cf47e900="" value="Tribal"></option>
                <option data-v-cf47e900="" value="Acid Punk"></option>
                <option data-v-cf47e900="" value="Acid Jazz"></option>
                <option data-v-cf47e900="" value="Polka"></option>
                <option data-v-cf47e900="" value="Retro"></option>
                <option data-v-cf47e900="" value="Musical"></option>
                <option data-v-cf47e900="" value="Rock &amp; Roll"></option>
                <option data-v-cf47e900="" value="Hard Rock"></option>
                <option data-v-cf47e900="" value="Folk"></option>
                <option data-v-cf47e900="" value="Folk-Rock"></option>
                <option data-v-cf47e900="" value="National Folk"></option>
                <option data-v-cf47e900="" value="Swing"></option>
                <option data-v-cf47e900="" value="Fast Fusion"></option>
                <option data-v-cf47e900="" value="Bebob"></option>
                <option data-v-cf47e900="" value="Latin"></option>
                <option data-v-cf47e900="" value="Revival"></option>
                <option data-v-cf47e900="" value="Celtic"></option>
                <option data-v-cf47e900="" value="Bluegrass"></option>
                <option data-v-cf47e900="" value="Avantgarde"></option>
                <option data-v-cf47e900="" value="Gothic Rock"></option>
                <option data-v-cf47e900="" value="Progressive Rock"></option>
                <option data-v-cf47e900="" value="Psychedelic Rock"></option>
                <option data-v-cf47e900="" value="Symphonic Rock"></option>
                <option data-v-cf47e900="" value="Slow Rock"></option>
                <option data-v-cf47e900="" value="Big Band"></option>
                <option data-v-cf47e900="" value="Chorus"></option>
                <option data-v-cf47e900="" value="Easy Listening"></option>
                <option data-v-cf47e900="" value="Acoustic"></option>
                <option data-v-cf47e900="" value="Humour"></option>
                <option data-v-cf47e900="" value="Speech"></option>
                <option data-v-cf47e900="" value="Chanson"></option>
                <option data-v-cf47e900="" value="Opera"></option>
                <option data-v-cf47e900="" value="Chamber Music"></option>
                <option data-v-cf47e900="" value="Sonata"></option>
                <option data-v-cf47e900="" value="Symphony"></option>
                <option data-v-cf47e900="" value="Booty Bass"></option>
                <option data-v-cf47e900="" value="Primus"></option>
                <option data-v-cf47e900="" value="Porn Groove"></option>
                <option data-v-cf47e900="" value="Satire"></option>
                <option data-v-cf47e900="" value="Slow Jam"></option>
                <option data-v-cf47e900="" value="Club"></option>
                <option data-v-cf47e900="" value="Tango"></option>
                <option data-v-cf47e900="" value="Samba"></option>
                <option data-v-cf47e900="" value="Folklore"></option>
                <option data-v-cf47e900="" value="Ballad"></option>
                <option data-v-cf47e900="" value="Power Ballad"></option>
                <option data-v-cf47e900="" value="Rhythmic Soul"></option>
                <option data-v-cf47e900="" value="Freestyle"></option>
                <option data-v-cf47e900="" value="Duet"></option>
                <option data-v-cf47e900="" value="Punk Rock"></option>
                <option data-v-cf47e900="" value="Drum Solo"></option>
                <option data-v-cf47e900="" value="A cappella"></option>
                <option data-v-cf47e900="" value="Euro-House"></option>
                <option data-v-cf47e900="" value="Dance Hall"></option>
                <option data-v-cf47e900="" value="Goa"></option>
                <option data-v-cf47e900="" value="Drum &amp; Bass"></option>
                <option data-v-cf47e900="" value="Club-House"></option>
                <option data-v-cf47e900="" value="Hardcore Techno"></option>
                <option data-v-cf47e900="" value="Terror"></option>
                <option data-v-cf47e900="" value="Indie"></option>
                <option data-v-cf47e900="" value="BritPop"></option>
                <option data-v-cf47e900="" value="Negerpunk"></option>
                <option data-v-cf47e900="" value="Polsk Punk"></option>
                <option data-v-cf47e900="" value="Beat"></option>
                <option data-v-cf47e900="" value="Christian Gangsta Rap"></option>
                <option data-v-cf47e900="" value="Heavy Metal"></option>
                <option data-v-cf47e900="" value="Black Metal"></option>
                <option data-v-cf47e900="" value="Crossover"></option>
                <option data-v-cf47e900="" value="Contemporary Christian"></option>
                <option data-v-cf47e900="" value="Christian Rock"></option>
                <option data-v-cf47e900="" value="Merengue"></option>
                <option data-v-cf47e900="" value="Salsa"></option>
                <option data-v-cf47e900="" value="Thrash Metal"></option>
                <option data-v-cf47e900="" value="Anime"></option>
                <option data-v-cf47e900="" value="JPop"></option>
                <option data-v-cf47e900="" value="SynthPop"></option>
                <option data-v-cf47e900="" value="Abstract"></option>
                <option data-v-cf47e900="" value="Art Rock"></option>
                <option data-v-cf47e900="" value="Baroque"></option>
                <option data-v-cf47e900="" value="Bhangra"></option>
                <option data-v-cf47e900="" value="Big beat"></option>
                <option data-v-cf47e900="" value="Breakbeat"></option>
                <option data-v-cf47e900="" value="Chillout"></option>
                <option data-v-cf47e900="" value="Downtempo"></option>
                <option data-v-cf47e900="" value="Dub"></option>
                <option data-v-cf47e900="" value="EBM"></option>
                <option data-v-cf47e900="" value="Eclectic"></option>
                <option data-v-cf47e900="" value="Electro"></option>
                <option data-v-cf47e900="" value="Electroclash"></option>
                <option data-v-cf47e900="" value="Emo"></option>
                <option data-v-cf47e900="" value="Experimental"></option>
                <option data-v-cf47e900="" value="Garage"></option>
                <option data-v-cf47e900="" value="Global"></option>
                <option data-v-cf47e900="" value="IDM"></option>
                <option data-v-cf47e900="" value="Illbient"></option>
                <option data-v-cf47e900="" value="Industro-Goth"></option>
                <option data-v-cf47e900="" value="Jam Band"></option>
                <option data-v-cf47e900="" value="Krautrock"></option>
                <option data-v-cf47e900="" value="Leftfield"></option>
                <option data-v-cf47e900="" value="Lounge"></option>
                <option data-v-cf47e900="" value="Math Rock"></option>
                <option data-v-cf47e900="" value="New Romantic"></option>
                <option data-v-cf47e900="" value="Nu-Breakz"></option>
                <option data-v-cf47e900="" value="Post-Punk"></option>
                <option data-v-cf47e900="" value="Post-Rock"></option>
                <option data-v-cf47e900="" value="Psytrance"></option>
                <option data-v-cf47e900="" value="Shoegaze"></option>
                <option data-v-cf47e900="" value="Space Rock"></option>
                <option data-v-cf47e900="" value="Trop Rock"></option>
                <option data-v-cf47e900="" value="World Music"></option>
                <option data-v-cf47e900="" value="Neoclassical"></option>
                <option data-v-cf47e900="" value="Audiobook"></option>
                <option data-v-cf47e900="" value="Audio Theatre"></option>
                <option data-v-cf47e900="" value="Neue Deutsche Welle"></option>
                <option data-v-cf47e900="" value="Podcast"></option>
                <option data-v-cf47e900="" value="Indie-Rock"></option>
                <option data-v-cf47e900="" value="G-Funk"></option>
                <option data-v-cf47e900="" value="Dubstep"></option>
                <option data-v-cf47e900="" value="Garage Rock"></option>
                <option data-v-cf47e900="" value="Psybient"></option>
              </datalist></label>
            <!--v-if-->
          </div>
          <div data-v-cf47e900="" class="flex flex-col gap-2"><label class="text-(--schemes-on-surface)"><span class="m3-label-large block mb-1.5 text-(--schemes-on-surface-variant)">Year</span><input data-v-cf47e900="" aria-label="year" class="k-field block w-full" type="number" placeholder="Leave unchanged" data-testid="year-input" name="year"></label>
            <!--v-if-->
          </div>
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <footer data-v-cf47e900=""><button data-v-b156ac0d="" data-v-cf47e900="" class="k-btn m3-state m3-label-large" type="submit">Update</button><button data-v-b156ac0d="" data-v-cf47e900="" data-variant="ghost" class="k-btn m3-state m3-label-large btn-cancel" type="button">Cancel</button></footer>
</form>
`;
